# nicegui-reversi

./: .gitignore  README.md  pyproject.toml
src/nicegui_reversi/: __init__.py  __main__.py  reversi.py
src/tests/: test_reversi.py
