[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "nicegui>=2.9.1",
  "numpy>=2.2.2",
]
description = "Reversi on NiceGUI"
license = {text = "Apache-2.0"}
name = "nicegui-reversi"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/nicegui-reversi"

[project.scripts]
reversi = "nicegui_reversi:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D100", "D104", "D107", "D203", "D213", "D400", "D415", "DOC", "E501"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
